force-app/main/default/objects/Case_Status_Message__c/Case_Status_Message__c.object-meta.xml
<CustomObject>
    <label>Case Status Message</label>
    <nameField>
        <label>Case Status Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Status Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>