force-app/main/default/objects/Case_Status_Message__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categorization Category</label>
    <type>TextArea</type>
</CustomField>