force-app/main/default/objects/Case_Status_Message__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Categorization Complexity</label>
    <type>TextArea</type>
</CustomField>