force-app/main/default/objects/Case_Status_Message__c/fields/Duplicate_Count__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Count__c</fullName>
    <label>Duplicate Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>