force-app/main/default/objects/Case_Status_Message__c/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <label>Group Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>