force-app/main/default/objects/Case_Status_Message__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Case Status Messages</relationshipLabel>
    <relationshipName>Case_Status_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>