force-app/main/default/objects/Case_Status_Message__c/fields/Is_Automated__c.field-meta.xml
<CustomField>
    <fullName>Is_Automated__c</fullName>
    <label>Is Automated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>