force-app/main/default/objects/Case_Status_Message__c/fields/Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate__c</fullName>
    <label>Is Duplicate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>