force-app/main/default/objects/Case_Status_Message__c/fields/Is_Historical__c.field-meta.xml
<CustomField>
    <fullName>Is_Historical__c</fullName>
    <label>Is Historical</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>