force-app/main/default/objects/Case_Status_Message__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Categorization Language</label>
    <type>TextArea</type>
</CustomField>