force-app/main/default/objects/Case_Status_Message__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Case Status Messages</relationshipLabel>
    <relationshipName>Case_Status_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>