force-app/main/default/objects/Case_Status_Message__c/fields/Message_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Delivery_Status__c</fullName>
    <label>Message Delivery Status</label>
    <type>TextArea</type>
</CustomField>