force-app/main/default/objects/Case_Status_Message__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Status Messages</relationshipLabel>
    <relationshipName>Case_Status_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>