force-app/main/default/objects/Case_Status_Message__c/fields/Read_At__c.field-meta.xml
<CustomField>
    <fullName>Read_At__c</fullName>
    <label>Read At</label>
    <type>TextArea</type>
</CustomField>