force-app/main/default/objects/Case_Status_Message__c/fields/Read_By__c.field-meta.xml
<CustomField>
    <fullName>Read_By__c</fullName>
    <label>Read By</label>
    <type>TextArea</type>
</CustomField>