force-app/main/default/objects/Case_Status_Message__c/fields/Reader_Type__c.field-meta.xml
<CustomField>
    <fullName>Reader_Type__c</fullName>
    <label>Reader Type</label>
    <type>TextArea</type>
</CustomField>