force-app/main/default/objects/Case_Status_Message__c/fields/Sender_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email_Address__c</fullName>
    <label>Sender Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>