force-app/main/default/objects/Case_Status_Message__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Categorization Sentiment</label>
    <type>TextArea</type>
</CustomField>