force-app/main/default/objects/Case_Status_Message__c/fields/Source_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Message Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>