force-app/main/default/objects/Case_Status_Message__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Categorization Subcategory</label>
    <type>TextArea</type>
</CustomField>