force-app/main/default/objects/Case_Status_Message__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Categorization Urgency</label>
    <type>TextArea</type>
</CustomField>