force-app/main/default/objects/Case_Status_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Urgency__c</columns>
    <columns>Category__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Intake__c</columns>
    <columns>Matter__c</columns>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Read_By__c</columns>
    <columns>Sender_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>